--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>nanfang</title></head><body><script src="//say-healer.github.io/animation-demo/index.bundle.js"></script></body></html>
+<!DOCTYPE html><html><head><meta charset="UTF-8"><title>nanfang</title></head><body><script src="//say-healer.github.io/animation-demo/main.bundle.js"></script></body></html>
